# pygmtsar

./: .gitignore  BASICSGIT.TXT  BASICSVN.TXT  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  ChangeLog  GNUmakefile  Makefile  README.CMake  README.TXT  README.md  README.txt  ax_lib_hdf5.m4  config.mk.in  configure.ac  lib
.github/: FUNDING.yml
gmtsar/: .sbas_utils.c.swp  CMakeLists.txt  Makefile  PRM.h  SAT_baseline.c  SAT_llt2rat.c  SAT_llt2rat_sub.c  SAT_look.c  aastretch.c  acpatch.c  bperp.c  calc_dop.c  calc_dop_orb.c  conv.c  conv2d.c  cut_slc.c  do_freq_xcorr.c  do_time_int_xcorr.c  esarp.c  extend_orbit.c  fft_bins.c  fft_interpolate_routines.c  file_stuff.c  filter_SLC.c  fitoffset.c  geocode_slc.c  geoxyz.c  get_PRM.c  get_locations.c  get_params.c  gmtsar.h  hermite_c.c  highres_corr.c  interpolate_orbit.c  intp_coef.c  ldr_orbit.c  lib_functions.h  lib_strfuncs.c  llt2rat.h  llt2xyz.h  (+53 more)
gmtsar/csh/: CMakeLists.txt  MAI_processing.csh  align.csh  align_ALOS2_SCAN.csh  align_ALOS_SLC.csh  align_SAT.csh  align_batch.csh  align_batch_ALOS2_SCAN.csh  align_batch_ALOS_SLC.csh  align_tops.csh  align_tops_6par.csh  align_tops_esd.csh  baseline_table.csh  batch.alos2.config  batch.config  batch_processing.csh  batch_tops.config  cleanup.csh  config.alos.slc.txt  config.alos.ss.txt  config.alos.txt  config.alos2.slc.txt  config.csk.txt  config.envi.txt  config.ers.txt  config.rs2.txt  config.s1a.txt  config.tsx.txt  correct_insar_with_gnss.csh  correct_merge_offset.csh  create_frame_tops.csh  create_merge_input.csh  dem2topo_ra.csh  dem2topo_ra_ALOS2.csh  detrend_before_unwrap.csh  download_sentinel_orbits.csh  download_sentinel_orbits_linux.csh  estimate_ionospheric_phase.csh  example.intf.config  extract_one_time_series.csh  (+93 more)
gmtsar/deprecated/: align_SAT.csh  align_tops_6par.csh  config.alos.slc.txt  config.alos.ss.txt  config.alos2.slc.txt  config.csk.txt  config.envi.txt  config.ers.txt  config.rs2.txt  config.s1a.txt  config.tsx.txt  detrend_before_unwrap.csh  pre_proc_init.csh  update_PRM.csh
gmtsar/filters/: box5x3  boxcar.3x5  fill.3x3  gauss13x13  gauss15x15  gauss15x3  gauss15x3.m  gauss15x5  gauss15x5.m  gauss15x5_53km  gauss17x17  gauss17x17_2sig  gauss17x5  gauss19x19  gauss1x1  gauss21x21  gauss25x25  gauss25x7  gauss29x29  gauss29x9  gauss33x33  gauss33x9  gauss3x21  gauss5x3  gauss5x5  gauss5x5.m  gauss9x5  gauss9x9  gauss_alos_100m  gauss_alos_100m.m  gauss_alos_200m.m  gauss_alos_300m  gauss_alos_300m.m  gauss_alos_500m  gauss_alos_500m.m  gauss_alos_700m  gauss_alos_700m.m  gauss_dir_azi.m  gauss_dir_range.m  gauss_ers_100m  (+16 more)
gmtsar/include/: PRM.h  gmtsar.h  lib_functions.h  llt2rat.h  orbit.h  orbit_ALOS.h  sbas.h  soi.h  xcorr.h
gmtsar/lib_src/: Makefile  Makefile_orig  SAT_llt2rat_sub.c  aastretch.c  conv2d.c  do_freq_xcorr.c  fft_bins.c  file_stuff.c  filelist_make  get_params.c  intp_coef.c  ldr_orbit.c  read_data.c_old  read_optional_args.c  read_orb.c  rmpatch.c  rng_ref.c  sbas_utils.c  shift.c  sio_struct.c  siocomplex.c  spline.c  utils.c  utils_complex.c  write_orb.c
gmtsar/man/manl/: ers_baseline.l  ers_line_fixer.l  ers_repeat_times.l  exact_ers_time.l  fitoffset.l  ihBperp.l  ihconv.l  offset.l  pdiff.l  pre_proc.l  prm2gips.l  read_ccrs.l  sarp.l  stack_table.l
gmtsar/notebooks/: ASF_Downloading_2017_Iran–Iraq_Earthquake_vs_GMTSAR_GAMMA_SNAP.ipynb  ASF_Downloading_2020_Ardabil_Earthquake.ipynb  README.md  S1AB_2021_Crete_Earthquake_vs_geObsevatory.ipynb  S1AB_Crete_Earthquake_vs_geObsevatory.ipynb  S1A_2016_Kumamoto_Earthquake_vs_ESA_Sentinel_1_Toolbox.ipynb  S1A_Crete_Earthquake.ipynb  S1A_Stack_CPGF_T173.ipynb  S1A_Stack_CPGF_T173_TODO.ipynb  S1A_Yamchi_2021_Timeseries_Analysis.ipynb  intf_ra2ll.ipynb  trans_ra2ll.ipynb
gmtsar/py/: PRM.py  SBAS.py  intf_ra2ll.py  nearest_grid.py  prep_data.py  run_pytest.sh  trans_ra2ll.py  update_PRM.py
gmtsar/sh/: GMTSAR.gcloud_create_debian10.sh  GMTSAR.install.debian10.sh  GMTSAR.install.debian10.upstream.sh  GMTSAR.install.sh  GMTSAR.run.example.sh  GMTSAR.run.sh  GMTSAR0.setup.sh  GMTSAR1.data_orbit.sh  GMTSAR2.pins_orbit.sh  GMTSAR3.baseline_orbit_swaths.sh  GMTSAR4.master_orbit_swaths.sh  GMTSAR5.pairs_orbit_swaths.sh  GMTSAR6.run_orbit_swaths.sh  GMTSAR7.merge_orbit_swaths.sh  GMTSAR8.unwrap_orbit.sh  GMTSAR9.sbas_orbit.sh  prep_data.sh  telegram_senddocument.sh  telegram_sendmediagroup.sh  telegram_sendmessage.sh
gmtsar/test_shift/: Makefile  gauss.dat_orig  plot_shift.m  shifted.eps  test_shift.c  test_shift.c_orig
preproc/ALOS_preproc/: CMakeLists.txt  Makefile  README.txt  create_tar.csh
preproc/ALOS_preproc/ALOS_baseline/: ALOS_baseline.c  ALOS_llt2rat_sub.c  Makefile
preproc/ALOS_preproc/ALOS_fbd2fbs/: ALOS_fbd2fbs  ALOS_fbd2fbs.c  Makefile
preproc/ALOS_preproc/ALOS_fbd2fbs_SLC/: ALOS_fbd2fbs_SLC  ALOS_fbd2fbs_SLC.c  Makefile
preproc/ALOS_preproc/ALOS_fbd2ss/: ALOS_fbd2ss  ALOS_fbd2ss.c  Makefile
preproc/ALOS_preproc/ALOS_fbs2fbd/: ALOS_fbs2fbd.c  Makefile
preproc/ALOS_preproc/ALOS_filter_SLC/: ALOS_filter_SLC.c  Makefile
preproc/ALOS_preproc/ALOS_llt2rat/: ALOS_llt2rat  ALOS_llt2rat.c  ALOS_llt2rat.c.032113  ALOS_llt2rat.c.081914  ALOS_llt2rat.c.111914  IMG-HH-ALPSRP123490610-H1.0__A.PRM  Makefile  points.xyz
preproc/ALOS_preproc/ALOS_look/: ALOS_look  ALOS_look.c  Makefile
preproc/ALOS_preproc/ALOS_merge/: ALOS_merge  ALOS_merge.c  Makefile
preproc/ALOS_preproc/ALOS_mosaic_ss/: ALOS_mosaic_ss  ALOS_mosaic_ss.c  ALOS_mosaic_ss_2frames.c  Makefile
preproc/ALOS_preproc/ALOS_mosaic_ss_2frames/: ALOS_mosaic_ss_2frames  ALOS_mosaic_ss_2frames.c  Makefile
preproc/ALOS_preproc/ALOS_pre_process/: ALOS_pre_process  ALOS_pre_process.c  Makefile  parse_ALOS_commands.c  read_ALOSE_data.c  read_ALOS_data.c  roi_utils.c
preproc/ALOS_preproc/ALOS_pre_process_SLC/: ALOS_pre_process_SLC  ALOS_pre_process_SLC.c  Makefile  parse_ALOS_commands.c  read_ALOS_data_SLC.c  swap_ALOS_data_info.c
snaphu/src/: CMakeLists.txt  Makefile  snaphu.c  snaphu.h  snaphu_cost.c  snaphu_cs2.c  snaphu_cs2types.h  snaphu_io.c  snaphu_solver.c  snaphu_tile.c  snaphu_util.c
(+458 files in other folders)
